# gclip-cli

./: AGENTS.md  Cargo.toml  README.ja.md  README.md
.github/workflows/: ci-test.yml  release.yml
src/: lib.rs  main.rs
src/add/: mod.rs
src/cli/: mod.rs
src/doctor/: mod.rs
src/history/: mod.rs  parse.rs  path.rs  recent.rs
src/history/tests/: mod.rs  parse.rs  recent.rs
src/list/: mod.rs
src/registry/: add.rs  doctor.rs  io.rs  list.rs  merge.rs  mod.rs  path.rs  recent.rs  remove.rs  search.rs
src/registry/tests/: add.rs  doctor.rs  list.rs  merge.rs  mod.rs  recent.rs  remove.rs  search.rs  support.rs
src/remove/: mod.rs
src/search/: mod.rs  widget.rs
src/search/tests/: selection.rs
src/selection/: mod.rs
src/suggest/: config.rs  history_loader.rs  mod.rs  output.rs  recommend.rs  registry_ops.rs  selection.rs  types.rs
src/suggest/tests/: mod.rs  recommend.rs  selection.rs
tests/public_api/: mod.rs
