[package]
name = "gclip-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gclip"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
libc = "0.2.169"

[lints.clippy]
shadow_unrelated = "deny"
shadow_reuse = "deny"
shadow_same = "deny"
